--- a/packages/ranui/components/message/index.less
+++ b/packages/ranui/components/message/index.less
@@ -120,7 +120,7 @@
   position: var(--ran-message-position, fixed);
   top: var(--ran-message-top, 8px);
   left: var(--ran-message-left, 0);
-  z-index: var(--ran-message-z-index, 1010);
+  z-index: var(--ran-message-z-index, var(--ran-z-message, 1200));
   width: var(--ran-message-width, 100%);
   pointer-events: var(--ran-message-pointer-events, none);
   .message-in {
